--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
   "name": "ember-cli-is-mobile-shim",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.1",
+  "description": "Import isMobile.js into your Ember applications",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "isMobile",
+    "ismobilejs"
   ],
+  "bugs": {
+    "url": "https://github.com/sandydoo/ember-cli-is-mobile-shim/issues"
+  },
   "license": "MIT",
-  "author": "",
+  "author": "Sander Melnikov",
+  "homepage": "https://github.com/sandydoo/ember-cli-is-mobile-shim",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sandydoo/ember-cli-is-mobile-shim.git"
+  },
   "scripts": {
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.7"
+    "broccoli-funnel": "^1.1.0",
+    "broccoli-merge-trees": "^2.0.0",
+    "broccoli-stew": "^1.4.0",
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-import-polyfill": "^0.2.0",
+    "ismobilejs": "^0.4.1"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
     "ember-cli": "2.12.1",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
@@ -38,13 +51,15 @@
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.12.0",
-    "ember-welcome-page": "^2.0.2",
     "loader.js": "^4.2.3"
   },
   "engines": {
     "node": ">= 4"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "fastbootDependencies": [
+      "ismobilejs"
+    ]
   }
 }
