--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.6.0",
+    "chai": "^4.1.2",
     "ember-cli": "^2.15.1",
     "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-eslint": "^4.2.0",
+    "ember-cli-fastboot": "^1.0.5",
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-inject-live-reload": "^1.7.0",
