--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ember-is-mobile",
   "version": "2.0.2",
-  "description": "Use and import isMobile.js in your Ember applications",
+  "description": "Use isMobile.js in your Ember applications with full FastBoot support",
   "keywords": [
     "ember-addon",
-    "isMobile",
-    "ismobilejs"
+    "ismobilejs",
+    "ismobile",
+    "device detection",
+    "mobile devices",
+    "useragent"
   ],
   "bugs": {
     "url": "https://github.com/sandydoo/ember-is-mobile/issues"
@@ -36,8 +39,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.6.0",
-    "chai": "^4.1.2",
-    "ember-cli": "^2.15.1",
+    "ember-cli": "~2.15.1",
     "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-eslint": "^4.2.0",
     "ember-cli-fastboot": "^1.0.5",
@@ -56,7 +58,7 @@
     "loader.js": "^4.6.0"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
