--- a/package.json
+++ b/package.json
@@ -41,13 +41,12 @@
     "broccoli-asset-rev": "^2.6.0",
     "ember-cli": "~2.15.1",
     "ember-cli-dependency-checker": "^2.0.1",
-    "ember-cli-eslint": "^4.2.0",
+    "ember-cli-eslint": "^4.2.2",
     "ember-cli-fastboot": "^1.0.5",
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-inject-live-reload": "^1.7.0",
     "ember-cli-qunit": "^4.0.1",
-    "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-disable-prototype-extensions": "^1.1.3",
@@ -55,6 +54,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.5.0",
     "ember-source": "^2.15.0",
+    "eslint-plugin-ember": "^4.6.1",
     "loader.js": "^4.6.0"
   },
   "engines": {
