--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.6.0",
-    "ember-cli": "~2.15.1",
+    "ember-cli": "^2.16.2",
     "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-eslint": "^4.2.2",
     "ember-cli-fastboot": "^1.0.5",
@@ -48,12 +48,12 @@
     "ember-cli-inject-live-reload": "^1.7.0",
     "ember-cli-qunit": "^4.0.1",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.5.0",
-    "ember-source": "^2.15.0",
+    "ember-source": "~2.16.0",
     "eslint-plugin-ember": "^4.6.1",
     "loader.js": "^4.6.0"
   },
