--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "ember-is-mobile",
   "version": "2.0.4",
-  "description": "Use isMobile.js in your Ember applications with full FastBoot support",
+  "description": "Detect requests from mobile devices in your Ember apps!",
   "keywords": [
     "ember-addon",
     "ismobilejs",
     "ismobile",
     "device detection",
     "mobile devices",
-    "useragent"
+    "user agent",
+    "fastboot"
   ],
   "bugs": {
     "url": "https://github.com/sandydoo/ember-is-mobile/issues"
@@ -27,7 +28,8 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember try:each",
+    "test:fastboot": "qunit fastboot-tests"
   },
   "dependencies": {
     "broccoli-funnel": "^2.0.1",
@@ -42,10 +44,11 @@
     "ember-cli": "^2.16.2",
     "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-eslint": "^4.2.2",
+    "ember-cli-fastboot": "^1.1.0",
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-inject-live-reload": "^1.7.0",
-    "ember-cli-qunit": "^4.0.1",
+    "ember-cli-qunit": "^4.1.0-beta.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
@@ -54,7 +57,10 @@
     "ember-resolver": "^4.5.0",
     "ember-source": "~2.16.0",
     "eslint-plugin-ember": "^4.6.1",
-    "loader.js": "^4.6.0"
+    "fastboot-app-server": "^1.1.0",
+    "jsdom": "^11.4.0",
+    "loader.js": "^4.6.0",
+    "qunitjs": "^2.4.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
