--- a/package.json
+++ b/package.json
@@ -11,59 +11,69 @@
     "user agent",
     "fastboot"
   ],
-  "bugs": {
-    "url": "https://github.com/sandydoo/ember-is-mobile/issues"
-  },
-  "license": "MIT",
-  "author": "Sander Melnikov",
-  "homepage": "https://github.com/sandydoo/ember-is-mobile",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/sandydoo/ember-is-mobile.git"
   },
+  "license": "MIT",
+  "author": "Sander Melnikov",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "bugs": {
+    "url": "https://github.com/sandydoo/ember-is-mobile/issues"
+  },
+  "homepage": "https://github.com/sandydoo/ember-is-mobile",
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test",
+    "test:all": "ember try:each",
     "test:fastboot": "qunit fastboot-tests"
   },
   "dependencies": {
     "broccoli-funnel": "^2.0.1",
     "broccoli-merge-trees": "^2.0.0",
     "broccoli-stew": "^1.4.0",
-    "ember-cli-babel": "^6.8.2",
+    "ember-cli-babel": "^7.7.3",
     "ember-cli-import-polyfill": "^0.2.0",
     "ismobilejs": "^0.4.1"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.6.0",
-    "ember-cli": "^2.16.2",
-    "ember-cli-dependency-checker": "^2.0.1",
-    "ember-cli-eslint": "^4.2.2",
+    "@ember/optional-features": "^0.7.0",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-cli": "~3.11.0",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-eslint": "^5.1.0",
     "ember-cli-fastboot": "^1.1.0",
-    "ember-cli-htmlbars": "^2.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.7.0",
-    "ember-cli-qunit": "^4.1.0-beta.2",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.0",
-    "ember-source": "~2.16.0",
-    "eslint-plugin-ember": "^4.6.1",
+    "ember-load-initializers": "^2.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^4.4.1",
+    "ember-resolver": "^5.0.1",
+    "ember-source": "~3.11.1",
+    "ember-source-channel-url": "^1.1.0",
+    "ember-try": "^1.0.0",
+    "eslint-plugin-ember": "^6.2.0",
+    "eslint-plugin-node": "^9.0.1",
     "fastboot-app-server": "^1.1.0",
     "jsdom": "^11.4.0",
-    "loader.js": "^4.6.0",
+    "loader.js": "^4.7.0",
+    "qunit-dom": "^0.8.4",
     "qunitjs": "^2.4.1"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
