--- a/package.json
+++ b/package.json
@@ -87,5 +87,9 @@
     "fastbootDependencies": [
       "ismobilejs"
     ]
+  },
+  "volta": {
+    "node": "14.16.1",
+    "yarn": "1.22.10"
   }
 }
