--- a/.npmignore
+++ b/.npmignore
@@ -24,6 +24,8 @@
 /config/ember-try.js
 /CONTRIBUTING.md
 /ember-cli-build.js
+/fastboot-tests/
+/fastBootServer.js
 /testem.js
 /tests/
 /yarn.lock
