--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-is-mobile",
   "version": "4.1.1",
-  "description": "Detect requests from mobile devices in your Ember apps!",
+  "description": "Detect requests from mobile devices in your Ember apps.",
   "keywords": [
     "ember-addon",
     "ismobilejs",
@@ -16,7 +16,7 @@
     "url": "git://github.com/sandydoo/ember-is-mobile.git"
   },
   "license": "MIT",
-  "author": "Sander Melnikov",
+  "author": "Sander Melnikov <hey@sandydoo.me>",
   "directories": {
     "test": "tests"
   },
